<resources>

    <string name="app_name">巅峰训练</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fans">粉丝</string>
    <string name="attention">关注</string>
    <string name="circle">圈子</string>
    <string name="answer_post">问答/帖子</string>
    <string name="feedback">反馈意见</string>
    <string name="settings">设置</string>
    <string name="voucher">优惠券</string>
    <string name="my_order">我的订单</string>
    <string name="my_collection">我的收藏</string>
    <string name="title_activity_user">编辑资料</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="age">年龄</string>
    <string name="choose">请选择</string>
    <string name="sex">性别</string>
    <string name="bind_phone">绑定手机号：</string>
    <string name="grade">年级</string>
    <string name="harvest_address">收货地址</string>
    <string name="add_alter">添加/修改</string>
    <string name="signature">个性签名</string>
    <string name="sign_out">退出登录</string>
    <string name="answer">问答</string>
    <string name="post">帖子</string>
    <string name="title_activity_circle">我关注的圈子</string>
    <string name="title_activity_people">我关注的人</string>
    <string name="title_activity_fans">我的粉丝</string>
    <string name="title_activity_collection">我的收藏</string>
    <string name="information">资讯</string>
    <string name="title_activity_order">我的订单</string>
    <string name="all">全部</string>
    <string name="pending_payment">待付款</string>
    <string name="be_evaluated">待评价</string>
    <string name="title_activity_pending_payment">待付款</string>
    <string name="total_price">总价</string>
    <string name="offer">优惠</string>
    <string name="real_price">实付款</string>
    <string name="cancel_order">取消订单</string>
    <string name="go_to_pay">去支付</string>
    <string name="title_activity_payment_order">支付订单</string>
    <string name="RMB">￥</string>
    <string name="payment_method">支付方式</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="we_chat_pay">微信支付</string>
    <string name="confirm_payment">确认支付</string>
    <string name="title_activity_payment_succ">" "</string>
    <string name="payment_success">支付成功</string>
    <string name="title_activity_coupon">优惠</string>
    <string name="unused">未使用</string>
    <string name="used">已使用</string>
    <string name="expired">已过期</string>
    <string name="exchange">兑换</string>
    <string name="please_enter_the_redemption_code">请输入兑换码</string>
    <string name="title_activity_feedback">意见与反馈</string>
    <string name="submit">提交</string>
    <string name="title_activity_setting">设置</string>
    <string name="change_password">修改密码</string>
    <string name="current_version">当前版本</string>
    <string name="clear_cache">清理缓存</string>
    <string name="invite_friends">邀请好友</string>
    <string name="seek_praise">求好评</string>
    <string name="about_us">关于我们</string>
    <string name="title_activity_homepage">个人主页</string>
    <string name="report">举报</string>
    <string name="go_to_commit">去评论</string>
    <string name="delete_order">删除订单</string>
    <string name="ask">提问</string>
    <string name="title_activity_ask">提问</string>
    <string name="release">发布</string>
    <string name="belong_book">所属图书</string>
    <string name="ask_class">问题分类</string>
    <string name="title_activity_post">帖子详情</string>
    <string name="title_activity_login">登录</string>
    <string name="register">注册</string>
    <string name="title_activity_register">手机号注册</string>
    <string name="title_activity_change_password">修改密码</string>
    <string name="title_activity_change_phone">绑定手机号</string>
    <string name="title_activity_recover_password">找回密码</string>
    <string name="complete">完成</string>
    <string name="title_activity_message">消息</string>
    <string name="message">消息</string>
    <string name="notice">通知</string>
    <string name="title_activity_message_details">消息详情</string>
    <string name="title_activity_notice_details">通知详情</string>
    <string name="birthday">生日</string>
    <string name="title_activity_grade">选择年级</string>
    <string name="determine">确定</string>
    <string name="title_activity_change_sign">个性签名</string>
    <string name="save">保存</string>
    <string name="title_activity_change_nickname">昵称</string>
    <string name="cancel">取消</string>
    <string name="title_activity_net_lessons">网课详情</string>
    <string name="detail">详情</string>
    <string name="list">目录</string>
    <string name="related_web_courses">相关网课</string>
    <string name="introduction">课程简介</string>
    <string name="title_activity_confirm_order">确认订单</string>
    <string name="total">合计</string>
    <string name="title_activity_coupon_detail">优惠券详情</string>
    <string name="title_activity_cg_practice">闯关练习</string>
    <string name="title_activity_order_comment">评论</string>
    <string name="title_activity_about">关于我们</string>
    <string name="app_about">\u3000\u3000山东星火教育科技集团股份有限公司推出的“巅峰训练App”专为学生设计，以测评为入口，提供资源下载、在线测试、知识问答、在线网课等一系列解决方案。“巅峰训练App”带你开启个性化智能学习之旅。</string>
    <string name="app_about_1">Copyright © 2021 All Rights Reserved\n山东星火教育科技集团股份有限公司</string>
    <string name="record">练习记录</string>
    <string name="next">下一步</string>
    <string name="offline">离线中心</string>
    <string name="agreement">请充分阅读并理解《用户服务协议》和《隐私政策》\n1、在仅浏览时，为保障服务所需，我们会申请系统权限、手机设备信息、日志信息、用户信息推送。\n2、为保证提供的在线录播课程下载、课程资料/音频等服务的正常使用，我们可能会在对应服务申请存储权限，用于下载课程内容及缓存课程课件、音频、讨论内容、课程视频等相关文件，该权限均不会默认开启，只有服务使用时经过明示授权才会实现功能使用，您均可拒绝且不影响您继续使用巅峰训练其他服务。\n3、为了保证提供的二维码扫描等服务正常使用，我们可能会在对应服务申请摄像头等权限。该权限均不会默认开启，只有服务使用时经过明示授权才会实现功能使用，您均可拒绝且不影响您继续使用巅峰训练其他服务。\n4、我们尊重您的选择权，如果您不希望使用以上权限，可以在系统设置中随时关闭。</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
